sample/retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABN__c</fullName>
        <label>ABN</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACN__c</fullName>
        <label>ACN</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_WaterMAP_Count__c</fullName>
        <label>Active WaterMAP Count</label>
        <summaryFilterItems>
            <field>WaterMAP__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </summaryFilterItems>
        <summaryForeignKey>WaterMAP__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_Phone__c</fullName>
        <label>Additional Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Applicable_Date_Primary__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Applicable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applicable_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>When the Future Address details become applicable</description>
        <label>Applicable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Accounts_linked_to_Mailing__c</fullName>
        <label>Billing Accounts linked to Mailing</label>
        <summaryFilterItems>
            <field>Billing_Account__c.Billing_Address_Same_As__c</field>
            <operation>equals</operation>
            <value>Customer Mailing</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Account__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_Accounts_linked_to_Primary__c</fullName>
        <label>Billing Accounts linked to Primary</label>
        <summaryFilterItems>
            <field>Billing_Account__c.Billing_Address_Same_As__c</field>
            <operation>equals</operation>
            <value>Customer Primary</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Account__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_Address_DPID__c</fullName>
        <label>Mailing Address DPID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Profile__c</fullName>
        <label>Business Profile</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_Sub_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Sub Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concession_cnt__c</fullName>
        <label>Concession cnt</label>
        <summarizedField>Billing_Account__c.Concession_cnt__c</summarizedField>
        <summaryForeignKey>Billing_Account__c.Customer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Number2__c</fullName>
        <displayFormat>C{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>Customer Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Data_Check_Address_special_charactor__c</fullName>
        <formula>IF(OR(
OR(CONTAINS( BillingCity , &quot;\&quot;&quot;),CONTAINS( BillingCity , &quot;.&quot;)),
OR(CONTAINS( BillingCountry , &quot;\&quot;&quot;),CONTAINS( BillingCountry , &quot;.&quot;)),
OR(CONTAINS( BillingPostalCode , &quot;\&quot;&quot;),CONTAINS( BillingPostalCode , &quot;.&quot;)),
OR(CONTAINS( BillingState , &quot;\&quot;&quot;),CONTAINS( BillingState , &quot;.&quot;)),
OR(CONTAINS( BillingStreet , &quot;\&quot;&quot;),CONTAINS( BillingStreet , &quot;.&quot;)),
OR(CONTAINS( ShippingCity , &quot;\&quot;&quot;),CONTAINS( ShippingCity , &quot;.&quot;)),
OR(CONTAINS( ShippingCountry , &quot;\&quot;&quot;),CONTAINS( ShippingCountry , &quot;.&quot;)),
OR(CONTAINS( ShippingPostalCode , &quot;\&quot;&quot;),CONTAINS( ShippingPostalCode , &quot;.&quot;)),
OR(CONTAINS( ShippingState , &quot;\&quot;&quot;),CONTAINS( ShippingState , &quot;.&quot;)),
OR(CONTAINS( ShippingStreet , &quot;\&quot;&quot;),CONTAINS( ShippingStreet , &quot;.&quot;))
),&quot;Address has special charactor&quot;, &quot;Address has no special charactor&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Check-Address special charactor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Check_Phone_is_NOT_number__c</fullName>
        <formula>IF(
OR(NOT( ISBLANK(Phone))&amp;&amp;NOT(ISNUMBER( Phone )),NOT( ISBLANK( Additional_Phone__c ))&amp;&amp;NOT(ISNUMBER( Additional_Phone__c ))) ,&quot;Phone is not number&quot;, &quot;Phone is number or blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Check Phone is NOT number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedup_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dedup Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EWOV_Alert__c</fullName>
        <description>EWOV alert based on complaint</description>
        <formula>IF(
Is_EWOV_Investigative_Complaint__c&amp;&amp;NOT(Is_EWOV_Assisted_Complaint__c) ,  
IMAGE(&quot;https://southeastwater--c.ap1.content.force.com/servlet/servlet.ImageServer?id=0159000000034u4&amp;oid=00DO0000000W4pz&quot;, &quot;Blah&quot;) &amp; &quot;EWOV Investigative: Do not contact customer in relation to this complaint&quot;,
IF(Is_EWOV_Assisted_Complaint__c&amp;&amp;NOT(Is_EWOV_Investigative_Complaint__c) , IMAGE(&quot;https://southeastwater--c.ap1.content.force.com/servlet/servlet.ImageServer?id=0159000000034u4&amp;oid=00DO0000000W4pz&quot;, &quot;Blah&quot;) &amp; &quot;EWOV Assisted: Customer needs to be contacted within 24 hours&quot;, IF(NOT(Is_EWOV_Assisted_Complaint__c)&amp;&amp;NOT(Is_EWOV_Investigative_Complaint__c),&quot; &quot;,
(IMAGE(&quot;https://southeastwater--c.ap1.content.force.com/servlet/servlet.ImageServer?id=0159000000034u4&amp;oid=00DO0000000W4pz&quot;, &quot;Blah&quot;) &amp; &quot;EWOV Investigative: Do not contact customer in relation to this complaint&quot;) &amp; br()&amp;(IMAGE(&quot;https://southeastwater--c.ap1.content.force.com/servlet/servlet.ImageServer?id=0159000000034u4&amp;oid=00DO0000000W4pz&quot;, &quot;Blah&quot;) &amp; &quot;EWOV Assisted: Customer needs to be contacted within 24 hour&quot;))))</formula>
        <label>EWOV Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FORMULA_Segment_Image__c</fullName>
        <formula>IF(NOT(ISBLANK(Segment__r.Image__c)), IMAGE( Segment__r.Image__c ,  Segment__r.Name ), &apos;&apos;)</formula>
        <label>Segment Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FORMULA_Segment_Name_Image__c</fullName>
        <formula>IF(NOT(ISBLANK(Segment__r.Segment_Name_Image_URL__c)), IMAGE( Segment__r.Segment_Name_Image_URL__c ,  Segment__r.Name ), &apos;&apos;)</formula>
        <label>Segment Name Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FORMULA_Segment_Review_Overdue__c</fullName>
        <formula>IF(Segmentation_Overdue__c = &apos;Y&apos;,IMAGE(&apos;/resource/1297809602000/Warning_Icon&apos;, &apos;Blah&apos;) &amp; &apos;The segmentation details for this customer is out-of-date. Please review segmentation questionnaire with the customer.&apos;,&apos;&apos;)</formula>
        <label>Segment Review Overdue?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Account__c</fullName>
        <label>Facebook Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Concession__c</fullName>
        <formula>IF( Concession_cnt__c &gt; 0, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Has Concession</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Rebate__c</fullName>
        <formula>IF( Rebate_cnt__c &gt; 0, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Has Rebate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_DM_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Hidden) - DM Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_tap_pilot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be deleted by 31/1/14</description>
        <label>(Hidden) - Tap Pilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <label>Initials</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Mailing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>marks if communication has been returned and the address is invalid for that customer.</description>
        <label>Invalid Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Primary_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>marks if communication has been returned and the address is invalid for that customer.</description>
        <label>Invalid Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_EREP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is EREP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_EWOV_Assisted_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EWOV Assisted Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_EWOV_Investigative_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EWOV Investigative Complaint?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Key_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Key Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Main_Group_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Main Group Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Stakeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box is checked if a stakeholder</inlineHelpText>
        <label>Is Stakeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_WaterMAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active WaterMAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Customer_Type__c</fullName>
        <label>Key Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Equals_Postal_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If it is checked, Postal Address will be filled wtih Billing Address after you save the record.</inlineHelpText>
        <label>Mailing Address Equals Postal Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Group_Accounts__c</fullName>
        <label># Main Group Accounts</label>
        <summaryFilterItems>
            <field>Billing_Account__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Group Billing Account</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Account__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mercantile_Recovery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TT10680 This field is used to determine is the Customer currently has one or more Billing Accounts (determined by the MC classification) under mercantile recovery.
The sharing rule opens this up for the Mercantile Recovery app.</description>
        <inlineHelpText>Determines if the Customer has one or more Billing Accounts classified for mercantile recovery.</inlineHelpText>
        <label>Mercantile Recovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Ebill_Email_Date__c</fullName>
        <description>The most recent date of when one of the Billing Accounts Ebill Method was set to Email</description>
        <label>Most Recent Ebill Method Email Mod Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Billing_Accounts__c</fullName>
        <description>Field showing number of active billing accounts related to the customer</description>
        <label>Number of Active Billing Accounts</label>
        <summaryFilterItems>
            <field>Billing_Account__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Account__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_DD_Billing_Accts__c</fullName>
        <label>Number of Active DD Billing Accts</label>
        <summaryFilterItems>
            <field>Billing_Account__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Account__c.Direct_Debit__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Account__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Billing_Accounts__c</fullName>
        <description>Field showing number of billing accounts related to the customer (regardless of status)</description>
        <label>Number of Billing Accounts</label>
        <summaryForeignKey>Billing_Account__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Closed_Billing_Accounts__c</fullName>
        <formula>Number_of_Billing_Accounts__c -  Number_of_Active_Billing_Accounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Closed Billing Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Email_Billing_Accounts__c</fullName>
        <description>The number of Billing Accounts attached to the Customer (Account) which have the eBill Method set to “Email”</description>
        <label>Number of Email Billing Accounts</label>
        <summaryFilterItems>
            <field>Billing_Account__c.eBill_Method__c</field>
            <operation>equals</operation>
            <value>Email</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Account__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Overdue_Billing_Accounts_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Overdue Billing Accounts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Amount_Indicator__c</fullName>
        <formula>IF(Overdue_Balance_All_Accounts__c &gt; 0, IMAGE(&quot;img/samples/flag_red.gif&quot;, &quot;red&quot;), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Amount Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_Balance_All_Accounts__c</fullName>
        <label>Overdue Balance All Accounts</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Postal_Address__c</fullName>
        <inlineHelpText>This will be populated by Billing Address if it is the same.</inlineHelpText>
        <label>Postal Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Type__c</fullName>
        <label>Preferred Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Site Visit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Key_Customer_Visit_Frequency__c</fullName>
        <label>Preferred Key Customer Visit Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Address_DPID__c</fullName>
        <label>Primary Address DPID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1_Is_your_property_a_house_or_a_unit_a__c</fullName>
        <label>Q1. Your property a house or unit/apt</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Unit/Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - House</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q29a_Water_Saving_Frequency__c</fullName>
        <label>Q29a Water Saving Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Rarely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - About Half the Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Most of the Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Always</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q2_How_many_people_in_your_household__c</fullName>
        <label>Q2. How many people in your household?</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - 5 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q31A_Installing_water_saving_devices_is__c</fullName>
        <label>Q31a. Installing devices too expensive</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Agree Strongly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Agree Somewhat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither/Nor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Disagree Somewhat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Disagree Strongly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q31C_Open_to_receiving_help__c</fullName>
        <label>Q31c. Open to receiving help</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Agree Strongly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Agree Somewhat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither/Nor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Disagree Somewhat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Disagree Strongly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q31E_Want_my_business_to_save_water__c</fullName>
        <label>Q31e. Want my business to save water</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Agree Strongly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Agree Somewhat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither/Nor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Disagree Somewhat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Disagree Strongly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q39e_How_appealing_is_a_service__c</fullName>
        <label>Q39e. How appealing is a service</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q39l_How_appealing_is_a_regular_visit__c</fullName>
        <label>Q39i. How appealing is a regular visit</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q3_What_is_your_age__c</fullName>
        <label>Q3. What is your age?</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 18-24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - 25-29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 30-34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 35-39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - 40-44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - 45-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 50-54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - 55-59</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - 60-64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - 65 and over</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q43_How_much_your_business_protect_envi__c</fullName>
        <label>Q43. How much your biz protect envionmnt</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Nothing At All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - A Little Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Quite a Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - A Great Deal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q4_How_much_household_protect__c</fullName>
        <label>Q4. How much household protect envnmnt?</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Nothing At All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - A Little Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Quite a Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - A Great Deal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q5_How_often_use_more_than_you_should__c</fullName>
        <label>Q5. How often use more than you should?</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Rarely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - About Half the Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Most of the Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Always</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q7_Not_Interested_Water__c</fullName>
        <label>Q7. Agree on &quot;not interested in water&quot;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Agree Strongly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Agree Somewhat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither/Nor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Disagree Somewhat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Disagree Strongly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q8_Save_more_water__c</fullName>
        <label>Q8. Agree on &quot;want to save more water&quot;</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Agree Strongly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Agree Somewhat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither/Nor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Disagree Somewhat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Disagree Strongly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rebate_cnt__c</fullName>
        <description>Hidden formula for rollup of rebate flag from Product.</description>
        <label>Rebate cnt</label>
        <summarizedField>Product_Owned__c.Rebate_cnt__c</summarizedField>
        <summaryForeignKey>Product_Owned__c.Customer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Segment_Profile_Last_Updated__c</fullName>
        <label>Segment Profile Last Reviewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Segment_Profile_Next_Review_Date__c</fullName>
        <label>Segment Profile Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Segment_Reviewed_Channel__c</fullName>
        <label>Segment Reviewed Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment_Usage_Last_Updated__c</fullName>
        <label>Segment Usage Last Updated</label>
        <type>DateTime</type>
    </fields>
</CustomObject>